src/App.css
.course {
    margin-left: 10px;
    margin-right: 10px;
    width: 200px;
    margin-top: 10px;
    margin-bottom: 10px;
}



.cart {
    position: absolute;
  left: 0px;
  top: 0px;
  z-index: 2;
}

.currentCourses {
    text-align: center;
    width: 100%;
    margin-right: 0%;
}

.alert {
    text-align: center;
    color: red;
}

.cartButton {
    border-radius: 5px;
    float:right;
    margin-top: 10px;
    margin-right: 30px;
	z-index: 2;

}
.logo {
    margin-top: 50px;
    margin-bottom: 10px;
    width: 35%;
}
.checkBoxes {
    text-align: left;
    z-index: 2;
}

.textEntry {
    margin-top: 10px;
}
.appbody {
    background-color: rgb(251, 252, 255);
    width: 100wh;
    height: 100vh;
}

.header {
    color: rgb(80, 80, 80);
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
}

.title {
    margin-bottom: 4px;
    font-size: 18px;
    text-align: left;
    color: rgb(80, 80, 80);
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
}

